Project/GpMessages/2921579469700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Wednesday, 29 January 2025 9:40:20</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    &lt;Null&gt;
    ^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Wednesday, 29 January 2025 9:40:20 (Elapsed Time: 0.10 seconds)</msg></messages>